[gd_scene load_steps=19 format=3 uid="uid://qyp7y4cxqj53"]

[ext_resource type="Texture2D" uid="uid://c6wuirmkds3ko" path="res://assets/player_ship.png" id="1_7tvmr"]
[ext_resource type="Script" path="res://scripts/player.gd" id="1_cygec"]
[ext_resource type="PackedScene" uid="uid://y2xtvc08c5fb" path="res://scenes/bullet.tscn" id="2_3lmv7"]
[ext_resource type="Script" path="res://scripts/state_machine.gd" id="3_ovo3n"]
[ext_resource type="Script" path="res://scripts/alive.gd" id="4_gi6lt"]
[ext_resource type="Script" path="res://scripts/init.gd" id="4_xeknt"]
[ext_resource type="Script" path="res://scripts/dead.gd" id="7_nffb7"]
[ext_resource type="Script" path="res://scripts/invuln.gd" id="8_3k7yf"]
[ext_resource type="AudioStream" uid="uid://bhssreolghhes" path="res://assets/sounds/laser.ogg" id="9_wa8md"]
[ext_resource type="PackedScene" uid="uid://cel0mu40i1nub" path="res://scenes/explosion.tscn" id="10_jilcg"]
[ext_resource type="AudioStream" uid="uid://dlbhggy5hbiy0" path="res://assets/sounds/engine.ogg" id="11_hufo2"]

[sub_resource type="Curve" id="Curve_te56i"]
max_value = 100.0
_data = [Vector2(0, 100), 0.0, 0.0, 0, 0, Vector2(1e-05, 100), 0.0, 0.0, 0, 0, Vector2(1, 21.978), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Curve" id="Curve_ejavr"]
_data = [Vector2(0, 0.868132), 0.0, 0.0, 0, 0, Vector2(1, 0.175824), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_tr4kj"]
colors = PackedColorArray(0.75339, 2.38247e-06, 5.77569e-07, 1, 0.673504, 0.610577, 5.77569e-07, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_48xj3"]
radius = 29.0172

[sub_resource type="Animation" id="Animation_f2w83"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_sjb5g"]
resource_name = "hitflash"
length = 0.2
step = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4wu2r"]
_data = {
"RESET": SubResource("Animation_f2w83"),
"hitflash": SubResource("Animation_sjb5g")
}

[node name="Player" type="RigidBody2D"]
max_contacts_reported = 1
contact_monitor = true
linear_damp = 1.0
angular_damp = 5.0
script = ExtResource("1_cygec")
bullet_scene = ExtResource("2_3lmv7")

[node name="ExhaustParticles" type="CPUParticles2D" parent="."]
visible = false
position = Vector2(0, 25)
amount = 100
lifetime = 0.2
local_coords = true
emission_shape = 1
emission_sphere_radius = 5.0
damping_curve = SubResource("Curve_te56i")
scale_amount_max = 10.0
scale_amount_curve = SubResource("Curve_ejavr")
color_ramp = SubResource("Gradient_tr4kj")
hue_variation_min = -0.13
hue_variation_max = 0.39

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_7tvmr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_48xj3")

[node name="Muzzle" type="Marker2D" parent="."]
position = Vector2(0, -50)

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("starting_state")]
script = ExtResource("3_ovo3n")
starting_state = NodePath("Init")

[node name="Init" type="Node" parent="StateMachine" node_paths=PackedStringArray("alive_state")]
script = ExtResource("4_xeknt")
alive_state = NodePath("../Alive")

[node name="Alive" type="Node" parent="StateMachine" node_paths=PackedStringArray("init_state", "invuln_state", "dead_state")]
script = ExtResource("4_gi6lt")
init_state = NodePath("../Init")
invuln_state = NodePath("../Invuln")
dead_state = NodePath("../Dead")
bullet_scene = ExtResource("2_3lmv7")

[node name="GunDelay" type="Timer" parent="StateMachine/Alive"]
one_shot = true

[node name="Dead" type="Node" parent="StateMachine" node_paths=PackedStringArray("init_state")]
script = ExtResource("7_nffb7")
init_state = NodePath("../Init")

[node name="Invuln" type="Node" parent="StateMachine" node_paths=PackedStringArray("alive_state")]
script = ExtResource("8_3k7yf")
alive_state = NodePath("../Alive")

[node name="Explosion" parent="." instance=ExtResource("10_jilcg")]

[node name="LaserSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_wa8md")
volume_db = -10.0

[node name="ExhaustSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_hufo2")

[node name="HitFlash" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4wu2r")
}

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="StateMachine/Alive/GunDelay" to="StateMachine/Alive" method="_on_gun_delay_timeout"]
